# scrample

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  bazel_stamp_vars.sh  versions.json
.devcontainer/: devcontainer.json
.github/workflows/: build-cli.yml  build.yml  debug-qnx-helper.yml  release.yml  release_verification.yml
docs/scrample/: index.rst
examples/: BUILD
examples/communication/: README.md
feo/ad-demo/: BUILD.bazel  Cargo.toml  README.md
feo/ad-demo/lichtblick-com/: BUILD.bazel  README.md  foxglove_ws_server.py  requirements.in  requirements_lock.txt
feo/ad-demo/src/: lib.rs
feo/ad-demo/src/activities/: application_config.rs  camera_activity.rs  common.rs  mcap_activity.rs  messages.rs  mod.rs  render_activity.rs
feo/ad-demo/src/agents/: primary.rs  secondary.rs
feo/ad-demo/src/assets/: gps_route.mcap
main/: genindex.html  index.html  search.html
pr-13/scrample/: index.html
pr-2/: genindex.html  index.html  search.html
pr-21/: index.html
pr-23/: genindex.html  index.html  search.html
pr-23/scrample/: index.html
pr-24/scrample/: index.html
pr-26/: searchindex.js
pr-28/: index.html
pr-28/scrample/: index.html
pr-4/: needs.json
score/: BUILD
score/src/: assert_handler.h  sample_sender_receiver.cpp
scorex/: BUILD.bazel  README.md  go.mod  main.go
scorex/cmd/: BUILD.bazel  init.go  root.go  skeleton_generator.go  version.go
scorex/cmd/templates/application/: MODULE.bazel.tmpl  bazelrc.tmpl
scorex/cmd/templates/application/daal_app/: point.bazelversion.tmpl
scorex/cmd/templates/application/daal_app/src/: BUILD.tmpl
scorex/cmd/templates/application/feo_app/src/: BUILD.tmpl
scorex/cmd/templates/application/src/: BUILD.tmpl
scorex/distribution/: install.sh
scorex/distribution/homebrew/: scorex.rb
scorex/distribution/scoop/: scorex.json
scorex/internal/config/: BUILD.bazel  config.go  known_good.go  module_presets.go  module_presets.json  project_config.go
scorex/internal/model/: BUILD.bazel  known_good.go  module.go
scorex/internal/module/: resolver.go
scorex/internal/projectinit/: BUILD.bazel  service.go
scorex/internal/service/knowngood/: BUILD.bazel  loader.go
scorex/internal/service/module/: BUILD.bazel  resolver.go
scorex/internal/service/projectinit/: BUILD.bazel  service.go
scorex/internal/service/skeleton/: BUILD.bazel  generator.go  properties.go
scorex/internal/skeleton/: BUILD.bazel  generator.go  properties.go
scorex/internal/templates/: BUILD.bazel  fs.go
scorex/internal/templates/application/daal_app/: MODULE.bazel.tmpl
scorex/internal/templates/application/daal_app/point.devcontainer/: prepare_workspace.sh.tmpl
scorex/internal/templates/application/daal_app/src/: BUILD.tmpl  hello_world_app.hpp.tmpl  main.cpp.tmpl
scorex/internal/templates/application/feo_app/: MODULE.bazel.tmpl
scorex/internal/templates/application/feo_app/src/: BUILD.tmpl  hello_world.rs.tmpl
scorex/internal/templates/application/feo_app_activities/: point.bazelversion.tmpl
scorex/internal/templates/application/feo_app_activities/point.devcontainer/: prepare_workspace.sh.tmpl
scorex/internal/templates/application/feo_app_activities/src/: BUILD.tmpl  lib.rs.tmpl
scorex/internal/templates/application/feo_app_activities/src/activities/: application_config.rs.tmpl  common.rs.tmpl  example_activity.rs.tmpl  messages.rs.tmpl  mod.rs.tmpl
scorex/internal/templates/application/feo_app_activities/src/agents/: primary.rs.tmpl  secondary.rs.tmpl
scorex/internal/templates/application/feo_app_simple/: MODULE.bazel.tmpl  point.bazelrc.tmpl
scorex/internal/templates/application/feo_app_simple/point.devcontainer/: devcontainer.json.tmpl
scorex/internal/templates/application/feo_app_simple/src/: BUILD.tmpl  hello_world.rs.tmpl
scorex/internal/templates/module/point.devcontainer/: devcontainer.json.tmpl
scorex/internal/templates/module/src/: main.cpp.tmpl
scorex/internal/utils/: BUILD.bazel  module_resolver.go  skeleton_properties.go
src/: BUILD  assert_handler.cpp  datatype.cpp  datatype.h  main.cpp  sample_sender_receiver.h
tests/cpp/: test_main.cpp
tests/rust/: BUILD
