# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
module(
    name = "score_scrample",
    version = "0.0.0",
    compatibility_level = 0,
)

# Configure and register the python toolchain.
bazel_dep(name = "rules_python", version = "1.8.3")

PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)
use_repo(python, "python_versions")


## Configure the C++ toolchain

bazel_dep(name = "score_bazel_cpp_toolchains", version = "0.2.2", dev_dependency = True)

gcc = use_extension("@score_bazel_cpp_toolchains//extensions:gcc.bzl", "gcc", dev_dependency = True)
gcc.toolchain(
    name = "score_gcc_x86_64_toolchain",
    target_cpu = "x86_64",
    target_os = "linux",
    use_default_package = True,
    version = "12.2.0",
)
gcc.toolchain(
    name = "score_gcc_aarch64_toolchain",
    target_cpu = "aarch64",
    target_os = "linux",
    use_default_package = True,
    version = "12.2.0",
)
gcc.toolchain(
    name = "score_qcc_x86_64_toolchain",
    sdp_version = "8.0.0",
    target_cpu = "x86_64",
    target_os = "qnx",
    use_default_package = True,
    version = "12.2.0",
)
gcc.toolchain(
    name = "score_qcc_aarch64_toolchain",
    sdp_version = "8.0.0",
    target_cpu = "aarch64",
    target_os = "qnx",
    use_default_package = True,
    version = "12.2.0",
)
use_repo(
    gcc,
    "score_gcc_aarch64_toolchain",
    "score_gcc_x86_64_toolchain",
    "score_qcc_aarch64_toolchain",
    "score_qcc_x86_64_toolchain",
)


# Add GoogleTest dependency
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "google_benchmark", version = "1.9.5")

# rust
bazel_dep(name = "rules_rust", version = "0.67.0")
git_override(
    module_name = "rules_rust",
    commit = "2b171a7376e69cb1207eced1f66904ce4ae0c819",
    remote = "https://github.com/pawelrutkaq/rules_rust.git",  # To be fixed once rule_rust is in score bazel registry
)

# Shared Rust policies (Clippy config, etc.), overridden locally during development.
bazel_dep(name = "score_rust_policies", version = "0.0.5", dev_dependency = True)



# Add boost dependency
bazel_dep(name = "rules_boost", repo_name = "com_github_nelhage_rules_boost")
archive_override(
    module_name = "rules_boost",
    strip_prefix = "rules_boost-master",
    urls = ["https://github.com/nelhage/rules_boost/archive/refs/heads/master.tar.gz"],
)

bazel_dep(name = "boost.program_options", version = "1.87.0")

# C/C++ rules for Bazel
bazel_dep(name = "rules_cc", version = "0.2.16")

# tooling
bazel_dep(name = "score_tooling", version = "1.1.0")
bazel_dep(name = "aspect_rules_lint", version = "2.0.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")

#docs-as-code
bazel_dep(name = "score_process", version = "1.4.3")
bazel_dep(name = "score_baselibs", version = "0.2.4")
bazel_dep(name = "score_communication", version = "0.1.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "score_bazel_platforms", version = "0.0.4")
bazel_dep(name = "score_logging", version = "0.1.0")
#git_override(
#    module_name = "score_logging",
#    commit = "9ed6a88cab10a81bf6b0813712cbd7b9fc7e44c5",
#    remote = "https://github.com/eclipse-score/logging.git",
#)

# TRLC dependency for requirements traceability
bazel_dep(name = "trlc", version = "0.0.0")
git_override(
    module_name = "trlc",
    commit = "ede35c4411d41abe42b8f19e78f8989ff79ad3d8",
    remote = "https://github.com/bmw-software-engineering/trlc.git",
)

bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.42.0", repo_name = "bazel_gazelle")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk", dev_dependency = True)
go_sdk.download(
    name = "go_sdk",
    version = "1.23.5",
)
go_sdk.download(
    name = "go_linux_amd64",
    goarch = "amd64",
    goos = "linux",
    version = "1.23.5",
)
go_sdk.download(
    name = "go_darwin_arm64",
    goarch = "arm64",
    goos = "darwin",
    version = "1.23.5",
)
go_sdk.download(
    name = "go_windows_amd64",
    goarch = "amd64",
    goos = "windows",
    version = "1.23.5",
)
go_sdk.download(
    name = "go_darwin_amd64",
    goarch = "amd64",
    goos = "darwin",
    version = "1.23.5",
)

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//scorex:go.mod")
use_repo(
    go_deps,
    "com_github_spf13_cobra",
)

#### Following section for Feo framework examples ###
bazel_dep(name = "score_crates", version = "0.0.6")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "ad-demo-local-crates",
    cargo_lockfile = "//feo/ad-demo:Cargo.lock",
    manifests = [
        "//feo/ad-demo:Cargo.toml",
    ],
)
use_repo(crate, "ad-demo-local-crates")

bazel_dep(name = "score_docs_as_code", version = "3.0.0")

bazel_dep(name = "score_feo", version = "1.0.5")


pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "lichtblick_com_pypi",
    python_version = "3.12",
    requirements_lock = "//feo/ad-demo/lichtblick-com:requirements_lock.txt",
)
use_repo(pip, "lichtblick_com_pypi")
