load("@rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:prefix scorex
exports_files([
    "go.mod",
    "go.sum",
])

go_library(
    name = "scorex_lib",
    srcs = ["main.go"],
    importpath = "scorex",
    visibility = ["//visibility:private"],
    deps = ["//scorex/cmd"],
)

go_binary(
    name = "scorex",
    embed = [":scorex_lib"],
    visibility = ["//visibility:public"],
)
