# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
load("@rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:prefix scorex
exports_files(
    [
        "go.mod",
        "go.sum",
    ],
    visibility = ["//visibility:public"],
)

go_library(
    name = "scorex_lib",
    srcs = ["main.go"],
    importpath = "scorex",
    visibility = ["//visibility:private"],
    deps = ["//scorex/cmd"],
)

go_binary(
    name = "scorex",
    embed = [":scorex_lib"],
    visibility = ["//visibility:public"],
)
