# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

rust_library(
    name = "activities_lib",
    srcs = [
        "src/activities/application_config.rs",
        "src/activities/camera_activity.rs",
        "src/activities/common.rs",
        "src/activities/mcap_activity.rs",
        "src/activities/messages.rs",
        "src/activities/mod.rs",
        "src/activities/render_activity.rs",
        "src/lib.rs",
    ],
    crate_features = [
        "com_iox2",
        "signalling_relayed_tcp",
    ],
    crate_name = "ad_demo",
    data = ["src/assets/gps_route.mcap"],
    visibility = ["//visibility:public"],
    deps = [
        "@ad-demo-local-crates//:camino",
        "@ad-demo-local-crates//:mcap",
        "@ad-demo-local-crates//:memmap2",
        "@feo//feo:libfeo_rust",
        "@feo//feo-com:libfeo_com_rust",
        "@feo//feo-log:libfeo_log_rust",
        "@feo//feo-logger:libfeo_logger_rust",
        "@feo//feo-time:libfeo_time_rust",
        "@feo//feo-tracing:libfeo_tracing_rust",
        "@score_crates//:anyhow",
        "@score_crates//:postcard",
        "@score_crates//:rand",
        "@score_crates//:serde",
        "@score_crates//:serde_json",
        "@score_crates//:tracing",
    ],
)

rust_binary(
    name = "agent_primary",
    srcs = [
        "src/agents/primary.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":activities_lib",
        "@feo//feo:libfeo_rust",
        "@feo//feo-log:libfeo_log_rust",
        "@feo//feo-logger:libfeo_logger_rust",
        "@feo//feo-time:libfeo_time_rust",
        "@feo//feo-tracing:libfeo_tracing_rust",
    ],
)

rust_binary(
    name = "agent_secondary",
    srcs = [
        "src/agents/secondary.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":activities_lib",
        "@feo//feo:libfeo_rust",
        "@feo//feo-log:libfeo_log_rust",
        "@feo//feo-logger:libfeo_logger_rust",
        "@feo//feo-time:libfeo_time_rust",
        "@feo//feo-tracing:libfeo_tracing_rust",
    ],
)
