# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "init.go",
        "root.go",
        "version.go",
    ],
    importpath = "scorex/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//scorex/internal/config",
        "//scorex/internal/model",
        "//scorex/internal/service/knowngood",
        "//scorex/internal/service/projectinit",
        "@com_github_spf13_cobra//:cobra",
    ],
)
